--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "migrate-internal": "knex migrate:latest",
     "test": "ava",
     "posttest": "eslint . --ext .ts",
-    "dev": "docker-compose up"
+    "dev": "docker-compose up",
+    "build": "webpack"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.3",
